--- a/Major_Project/Templates/index.html
+++ b/Major_Project/Templates/index.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello world</h1>
-    <h3>hello sagar</h3>
+    <h1>Helllo World</h1>
 </body>
 </html>
