--- a/Major_Project/Templates/index.html
+++ b/Major_Project/Templates/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Helllo World</h1>
+    <body>
+        <h1>Image Upload Form</h1>
+        <form method="POST" enctype="multipart/form-data">
+          {% csrf_token %}
+          <input type="file" name="image">
+          <br><br>
+          <button type="submit">Submit</button>
+        </form>
+      </body>
 </body>
 </html>
