--- a/Major_Project/Templates/index.html
+++ b/Major_Project/Templates/index.html
@@ -8,14 +8,36 @@
 </head>
 <body>
     <body>
-        <h1>Image Upload Form</h1>
+        {% comment %} <h1>Image Upload Form</h1>
         <form method="POST" enctype="multipart/form-data">
           {% csrf_token %}
           <input type="file" name="image">
           <br><br>
           <button type="submit">Submit</button>
         </form>
-        
+         {% endcomment %}
+
+        <h1>Select Your Option</h1>
+         <select class="form-select" aria-label="Default select example">
+            <option selected>Open this select menu</option>
+            <option value="1">One</option>
+            <option value="2">Two</option>
+            <option value="3">Three</option>
+          </select>
+        <h1>Select Your Option</h1>
+         <select class="form-select" aria-label="Default select example">
+            <option selected>Open this select menu</option>
+            <option value="1">One</option>
+            <option value="2">Two</option>
+            <option value="3">Three</option>
+          </select>
+        <h1>Select Your Option</h1>
+         <select class="form-select" aria-label="Default select example">
+            <option selected>Open this select menu</option>
+            <option value="1">One</option>
+            <option value="2">Two</option>
+            <option value="3">Three</option>
+          </select>
       </body>
 </body>
 </html>
